{
  "version": 4,
  "terraform_version": "1.6.1",
  "serial": 48,
  "lineage": "79a6b193-8317-48a2-1f05-57b70318e701",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "monitoring_elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c2a320de01cd30e",
            "association_id": "eipassoc-06f54aab517971c30",
            "domain": "vpc",
            "id": "eipalloc-02c2a320de01cd30e",
            "instance": "i-0d0ad5f0290fec888",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03ad1067f2993ab49",
            "private_dns": "ip-172-31-150-82.ec2.internal",
            "private_ip": "172.31.150.82",
            "public_dns": "ec2-3-225-173-141.compute-1.amazonaws.com",
            "public_ip": "3.225.173.141",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.admin_instance_profile",
            "aws_iam_role.admin_role",
            "aws_instance.monitoring_server",
            "aws_security_group.netflix_sg",
            "aws_subnet.netflix-subnet",
            "aws_vpc.netflix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "netflix_elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e8ae602ef65a8e4a",
            "association_id": "eipassoc-05d71e6715bfdd07f",
            "domain": "vpc",
            "id": "eipalloc-0e8ae602ef65a8e4a",
            "instance": "i-0185b6b7d6fcd4a16",
            "network_border_group": "us-east-1",
            "network_interface": "eni-038c85847aa063673",
            "private_dns": "ip-172-31-108-160.ec2.internal",
            "private_ip": "172.31.108.160",
            "public_dns": "ec2-3-229-99-144.compute-1.amazonaws.com",
            "public_ip": "3.229.99.144",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.admin_instance_profile",
            "aws_iam_role.admin_role",
            "aws_instance.netflix_server",
            "aws_security_group.netflix_sg",
            "aws_subnet.netflix-subnet",
            "aws_vpc.netflix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "monitoring_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cd59ecaf368e5ccf",
            "arn": "arn:aws:ec2:us-east-1:175985118028:instance/i-0d0ad5f0290fec888",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "AdministratorAccessInstanceProfile",
            "id": "i-0d0ad5f0290fec888",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "netflixkp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03ad1067f2993ab49",
            "private_dns": "ip-172-31-150-82.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.150.82",
            "public_dns": "ec2-44-223-48-148.compute-1.amazonaws.com",
            "public_ip": "44.223.48.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-058424935e020424b",
                "volume_size": 35,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-086a9afc11abe90c3",
            "tags": {
              "Name": "Monitoring Server"
            },
            "tags_all": {
              "Name": "Monitoring Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-080436dc9659f4a4a"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.admin_instance_profile",
            "aws_iam_role.admin_role",
            "aws_security_group.netflix_sg",
            "aws_subnet.netflix-subnet",
            "aws_vpc.netflix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "netflix_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cd59ecaf368e5ccf",
            "arn": "arn:aws:ec2:us-east-1:175985118028:instance/i-0185b6b7d6fcd4a16",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "AdministratorAccessInstanceProfile",
            "id": "i-0185b6b7d6fcd4a16",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "netflixkp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-038c85847aa063673",
            "private_dns": "ip-172-31-108-160.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.108.160",
            "public_dns": "ec2-107-21-156-2.compute-1.amazonaws.com",
            "public_ip": "107.21.156.2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f75b9fb67b84e571",
                "volume_size": 35,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-086a9afc11abe90c3",
            "tags": {
              "Name": "Netflix Server"
            },
            "tags_all": {
              "Name": "Netflix Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-080436dc9659f4a4a"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.admin_instance_profile",
            "aws_iam_role.admin_role",
            "aws_security_group.netflix_sg",
            "aws_subnet.netflix-subnet",
            "aws_vpc.netflix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "netflix-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175985118028:internet-gateway/igw-0af8b4fb62b4f6459",
            "id": "igw-0af8b4fb62b4f6459",
            "owner_id": "175985118028",
            "tags": {
              "Name": "netflix-env-gw"
            },
            "tags_all": {
              "Name": "netflix-env-gw"
            },
            "vpc_id": "vpc-0319e3d87273d83fb"
          },
          "dependencies": [
            "aws_vpc.netflix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-netflix-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175985118028:route-table/rtb-0555be353fc1a18b9",
            "id": "rtb-0555be353fc1a18b9",
            "owner_id": "175985118028",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0af8b4fb62b4f6459",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "netflix-env-route-table"
            },
            "tags_all": {
              "Name": "netflix-env-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0319e3d87273d83fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.netflix-gw",
            "aws_vpc.netflix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d74c909642348136",
            "route_table_id": "rtb-0555be353fc1a18b9",
            "subnet_id": "subnet-086a9afc11abe90c3"
          },
          "dependencies": [
            "aws_internet_gateway.netflix-gw",
            "aws_route_table.route-netflix-env",
            "aws_subnet.netflix-subnet",
            "aws_vpc.netflix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "netflix_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175985118028:security-group/sg-080436dc9659f4a4a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080436dc9659f4a4a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "netflix_sg",
            "name_prefix": "",
            "owner_id": "175985118028",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "netflix_sg"
            },
            "tags_all": {
              "name": "netflix_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0319e3d87273d83fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.netflix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "netflix-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175985118028:subnet/subnet-086a9afc11abe90c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.0.0/16",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086a9afc11abe90c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "175985118028",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "netflix"
            },
            "tags_all": {
              "Name": "netflix"
            },
            "vpc_id": "vpc-0319e3d87273d83fb"
          },
          "dependencies": [
            "aws_vpc.netflix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "netflix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175985118028:vpc/vpc-0319e3d87273d83fb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-050b32523e6d49539",
            "default_route_table_id": "rtb-0bb30c55ad0cedef2",
            "default_security_group_id": "sg-0331cfdaec1cb3ca9",
            "dhcp_options_id": "dopt-04e8f0dbff14ebb0e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0319e3d87273d83fb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bb30c55ad0cedef2",
            "owner_id": "175985118028",
            "tags": {
              "Name": "NetflixClone"
            },
            "tags_all": {
              "Name": "NetflixClone"
            }
          }
        }
      ]
    }
  ]
}